--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
                     <div th:if="${param.error}">
                         <div class="form__message form__message--error" th:text="*{error}"></div>
                     </div>
-                    <button class="form__button" th:value="#{user.log_in}" type="submit" name="login-sumbit" id="login-sumbit">Continue</button>
+                    <button class="form__button" th:value="#{customer.log_in}" type="submit" name="login-sumbit" id="login-sumbit">Continue</button>
                     <p class="form__text">
                         <a class="form__link" th:href="@{/register}" id="linkCreateAccount">Don't have an account? Create account</a>
                     </p>
